deploy/kubernetes/valkey-single-backup/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: agenyx-valkey
  namespace: agenyx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: valkey

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: agenyx-router
      ports:
        - protocol: TCP
          port: 6379
